day4/assignment/sts.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: minio-hsvc
  namespace: minions
spec:
  clusterIP: None
  selector:
    app: minio
    name: minio-po
  ports:
    - name: data
      port: 9000
      targetPort: 9000
    - name: console
      port: 9090
      targetPort: 9090
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: minio-stateful
  namespace: minions
  labels:
    app: minio
    name: minio-deploy
spec:
  serviceName: minio-hsvc
  replicas: 4
  selector:
    matchLabels:
      app: minio
      name: minio-po
  volumeClaimTemplates:
    - metadata:
        name: minio-data
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 1Gi
        storageClassName: do-block-storage
  template:
    metadata:
      labels:
        app: minio
        name: minio-po
    spec:
      securityContext:
        fsGroup: 1001
      containers:
      - name: minio-container
        image: bitnami/minio:2024.8.29
        livenessProbe:
          httpGet:
            path: /minio/health/live
            port: 9000
          initialDelaySeconds: 60
          periodSeconds: 30
        resources:
          limits:
            cpu: 200m
            memory: 250Mi
        ports:
          - name: data
            containerPort: 9000
          - name: console
            containerPort: 9090
        volumeMounts:
          - name: minio-data
            mountPath: /data
---
apiVersion: v1
kind: Service
metadata:
  name: minio-svc
  namespace: minions
  labels:
    app: minio
    name: minio-svc
spec:
  type: ClusterIP
  selector:
    app: minio
    name: minio-po
  ports:
    - name: data
      port: 9000
      targetPort: 9000
    - name: console
      port: 9090
      targetPort: 9090
